// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden runy nad reálným obsahem > seed 7, greedy-affinity, 4 hráči, Brody 1`] = `
[
  {
    "cile": [
      {
        "cil": "prsty-ve-vsem",
        "postava": "postava-1",
      },
      {
        "cil": "cisty-stit",
        "postava": "postava-2",
      },
      {
        "cil": "frajer-v-klidu",
        "postava": "postava-3",
      },
      {
        "cil": "kupecke-slovo",
        "postava": "postava-4",
      },
    ],
    "nodeIndex": 0,
    "postavy": [
      "postava-1",
      "postava-2",
      "postava-3",
      "postava-4",
    ],
    "pronasledovatel": "serif-brody",
    "seed": 7,
    "seq": 1,
    "type": "run_started",
    "verzeObsahu": "f0aa105f",
    "verzePravidel": "v0.1 / prototyp-mvp.md 2026-07-22 (po D7–D11)",
  },
  {
    "nabidnuto": [
      "mesto-houkacky",
      "deputy-hlidka",
    ],
    "nodeIndex": 1,
    "seq": 2,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 1,
    "seq": 3,
    "type": "route_chosen",
    "volba": "mesto-houkacky",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "sklep-u-strejdy",
      "sila": 2,
      "tag": "utek",
    },
    "nodeIndex": 1,
    "postava": "postava-1",
    "seq": 4,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "falesna-kontrola",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 1,
    "postava": "postava-2",
    "seq": 5,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkratka-pres-pole",
      "sila": 2,
      "tag": "utek",
    },
    "nodeIndex": 1,
    "postava": "postava-3",
    "seq": 6,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "seno-na-korbe",
      "sila": 1,
      "tag": "utek",
    },
    "nodeIndex": 1,
    "postava": "postava-4",
    "seq": 7,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 8,
    "sila": 2,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 1,
    "pocetZraneni": 1,
    "postava": "postava-2",
    "seq": 9,
    "type": "injury_added",
  },
  {
    "delta": 2,
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 1,
    "novaHodnota": 2,
    "seq": 10,
    "type": "heat_changed",
  },
  {
    "afinita": 0,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "selhani",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 11,
    "sila": 3,
    "soucet": 4,
    "tvrdostAplikovana": "zar",
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 12,
    "sila": 2,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 13,
    "sila": 1,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "selhani_v_uzlu",
    "nodeIndex": 1,
    "novaHodnota": 3,
    "seq": 14,
    "type": "heat_changed",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "sklep-u-strejdy",
          "nazev": "Sklep u strejdy",
          "sila": 2,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "falesna-kontrola",
          "nazev": "Falešná kontrola",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "selhani",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 4,
        "tvrdost_aplikovana": "zar",
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "zkratka-pres-pole",
          "nazev": "Zkratka přes pole",
          "sila": 2,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "seno-na-korbe",
          "nazev": "Seno na korbě",
          "sila": 1,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Houkačky v Albany",
    "nodeIndex": 1,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 0,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": true,
    "seq": 15,
    "type": "node_resolved",
    "uzel": "mesto-houkacky",
    "zar": 3,
    "zbyvaBeden": 6,
  },
  {
    "nabidnuto": [
      "farmar-brod",
      "deputy-mytnice",
    ],
    "nodeIndex": 2,
    "seq": 16,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 2,
    "seq": 17,
    "type": "route_chosen",
    "volba": "farmar-brod",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "obalka-pro-starostu",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 2,
    "postava": "postava-1",
    "seq": 18,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "doutnik-a-mlceni",
      "sila": 1,
      "tag": "uplatek",
    },
    "nodeIndex": 2,
    "postava": "postava-2",
    "seq": 19,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "clun-po-kanale",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 2,
    "postava": "postava-3",
    "seq": 20,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bankovka-do-dlane",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 2,
    "postava": "postava-4",
    "seq": 21,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 22,
    "sila": 2,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 2,
    "pocetZraneni": 2,
    "postava": "postava-2",
    "seq": 23,
    "type": "injury_added",
  },
  {
    "karta": "kocovina",
    "nodeIndex": 2,
    "pocetZraneni": 2,
    "postava": "postava-2",
    "seq": 24,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 25,
    "sila": 1,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 0,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 26,
    "sila": 3,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 2,
    "pocetZraneni": 1,
    "postava": "postava-4",
    "seq": 27,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 28,
    "sila": 2,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "obalka-pro-starostu",
          "nazev": "Obálka pro starostu",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "doutnik-a-mlceni",
          "nazev": "Doutník a mlčení",
          "sila": 1,
          "tag": "uplatek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "clun-po-kanale",
          "nazev": "Člun po kanále",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "bankovka-do-dlane",
          "nazev": "Bankovka do dlaně",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Brod u farmy",
    "nodeIndex": 2,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 1,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 29,
    "type": "node_resolved",
    "uzel": "farmar-brod",
    "zar": 3,
    "zbyvaBeden": 6,
  },
  {
    "nabidnuto": [
      "farmar-stodola",
      "deputy-hlidka",
    ],
    "nodeIndex": 3,
    "seq": 30,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 3,
    "seq": 31,
    "type": "route_chosen",
    "volba": "farmar-stodola",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "svatebni-dar",
      "sila": 1,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-1",
    "seq": 32,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "pohrebni-vuz",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-2",
    "seq": 33,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "knezsky-kolarek",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-3",
    "seq": 34,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkazena-tlacenka",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 3,
    "postava": "postava-4",
    "seq": 35,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 36,
    "sila": 1,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-2",
    "seq": 37,
    "type": "injury_added",
  },
  {
    "karta": "zbrklost",
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-2",
    "seq": 38,
    "type": "cursed_drawn",
  },
  {
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 3,
    "postava": "postava-2",
    "seq": 39,
    "type": "crate_lost",
    "zbyvaBeden": 5,
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": -2,
    "nodeIndex": 3,
    "pasmo": "selhani",
    "postava": "postava-2",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 40,
    "sila": 3,
    "soucet": 3,
    "tvrdostAplikovana": "bedna",
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 1,
    "postava": "postava-3",
    "seq": 41,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 42,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-4",
    "seq": 43,
    "type": "injury_added",
  },
  {
    "karta": "ztrata-dustojnosti",
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-4",
    "seq": 44,
    "type": "cursed_drawn",
  },
  {
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 3,
    "postava": "postava-4",
    "seq": 45,
    "type": "crate_lost",
    "zbyvaBeden": 4,
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "selhani",
    "postava": "postava-4",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 46,
    "sila": 2,
    "soucet": 4,
    "tvrdostAplikovana": "bedna",
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "selhani_v_uzlu",
    "nodeIndex": 3,
    "novaHodnota": 4,
    "seq": 47,
    "type": "heat_changed",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "svatebni-dar",
          "nazev": "Svatební dar",
          "sila": 1,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 1,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "pohrebni-vuz",
          "nazev": "Pohřební vůz",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "selhani",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 3,
        "tvrdost_aplikovana": "bedna",
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "knezsky-kolarek",
          "nazev": "Kněžský kolárek",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 1,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "zkazena-tlacenka",
          "nazev": "Zkažená tlačenka",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "selhani",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 4,
        "tvrdost_aplikovana": "bedna",
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Stodola u Batavie",
    "nodeIndex": 3,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 2,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": true,
    "seq": 48,
    "type": "node_resolved",
    "uzel": "farmar-stodola",
    "zar": 4,
    "zbyvaBeden": 4,
  },
  {
    "nabidnuto": [
      "deputy-hlidka",
      "urednik-vaha",
    ],
    "nodeIndex": 4,
    "seq": 49,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 4,
    "seq": 50,
    "type": "route_chosen",
    "volba": "urednik-vaha",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "dedeckova-brokovnice",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-1",
    "seq": 51,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": true,
      "id": "rudo-pred-ocima",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-2",
    "seq": 52,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "flaska-pres-palici",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-3",
    "seq": 53,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "mosazny-boxer",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-4",
    "seq": 54,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 6,
    "seq": 55,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "prah": 5,
    "seq": 56,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 57,
    "sila": 3,
    "soucet": 11,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 8,
    "seq": 58,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "prah": 7,
    "seq": 59,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 60,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 10,
    "seq": 61,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "prah": 10,
    "seq": 62,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 63,
    "sila": 2,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 3,
    "postava": "postava-4",
    "seq": 64,
    "type": "injury_added",
  },
  {
    "karta": "podvrtnuty-kotnik",
    "nodeIndex": 4,
    "pocetZraneni": 3,
    "postava": "postava-4",
    "seq": 65,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 66,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": true,
          "id": "dedeckova-brokovnice",
          "nazev": "Dědečkova brokovnice",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 11,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 4,
        "karta": {
          "hlucna": true,
          "id": "rudo-pred-ocima",
          "nazev": "Rudo před očima",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": true,
          "id": "flaska-pres-palici",
          "nazev": "Flaška přes palici",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": true,
          "id": "mosazny-boxer",
          "nazev": "Mosazný boxer",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Vážní stanice",
    "nodeIndex": 4,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 3,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 67,
    "type": "node_resolved",
    "uzel": "urednik-vaha",
    "zar": 10,
    "zbyvaBeden": 4,
  },
  {
    "nodeIndex": 4,
    "pronasledovatel": "serif-brody",
    "seq": 68,
    "type": "confrontation_started",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "skok-do-reky",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 4,
    "postava": "postava-1",
    "seq": 69,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-cigareta",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 4,
    "postava": "postava-2",
    "seq": 70,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bocni-ulicka",
      "sila": 1,
      "tag": "utek",
    },
    "nodeIndex": 4,
    "postava": "postava-3",
    "seq": 71,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 4,
    "postava": "postava-4",
    "seq": 72,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 73,
    "sila": 3,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 74,
    "sila": 3,
    "soucet": 11,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 2,
    "postava": "postava-3",
    "seq": 75,
    "type": "injury_added",
  },
  {
    "karta": "nutkani-ochutnat",
    "nodeIndex": 4,
    "pocetZraneni": 2,
    "postava": "postava-3",
    "seq": 76,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 77,
    "sila": 1,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 4,
    "postava": "postava-4",
    "seq": 78,
    "type": "injury_added",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 4,
    "postava": "postava-4",
    "seq": 79,
    "type": "character_down",
  },
  {
    "afinita": 0,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 80,
    "sila": 3,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "konfrontace",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "skok-do-reky",
          "nazev": "Skok do řeky",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "posledni-cigareta",
          "nazev": "Poslední cigareta",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 11,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "bocni-ulicka",
          "nazev": "Boční ulička",
          "sila": 1,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Konfrontace: Okresní šerif Brody",
    "nodeIndex": 4,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-4",
        "vyrazena": true,
        "zraneni": 4,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 81,
    "type": "node_resolved",
    "uzel": "serif-brody-konfrontace",
    "zar": 10,
    "zbyvaBeden": 4,
  },
  {
    "delta": -7,
    "duvod": "preziti_konfrontace",
    "nodeIndex": 4,
    "novaHodnota": 3,
    "seq": 82,
    "type": "heat_changed",
  },
  {
    "nabidnuto": [
      "nadrazi-vypravci",
      "nadrazi-noc",
    ],
    "nodeIndex": 5,
    "seq": 83,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 5,
    "seq": 84,
    "type": "route_chosen",
    "volba": "nadrazi-vypravci",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "salva-do-stropu",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 5,
    "postava": "postava-1",
    "seq": 85,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": true,
      "id": "rudo-pred-ocima",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 5,
    "postava": "postava-2",
    "seq": 86,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "klika-od-vozu",
      "sila": 1,
      "tag": "nasili",
    },
    "nodeIndex": 5,
    "postava": "postava-3",
    "seq": 87,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 5,
    "novaHodnota": 5,
    "seq": 88,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 5,
    "prah": 5,
    "seq": 89,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 90,
    "sila": 3,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 5,
    "novaHodnota": 7,
    "seq": 91,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 5,
    "prah": 7,
    "seq": 92,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 1,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 93,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 5,
    "novaHodnota": 9,
    "seq": 94,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 3,
    "postava": "postava-3",
    "seq": 95,
    "type": "injury_added",
  },
  {
    "karta": "prazdne-kapsy",
    "nodeIndex": 5,
    "pocetZraneni": 3,
    "postava": "postava-3",
    "seq": 96,
    "type": "cursed_drawn",
  },
  {
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 5,
    "postava": "postava-3",
    "seq": 97,
    "type": "crate_lost",
    "zbyvaBeden": 3,
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": -2,
    "nodeIndex": 5,
    "pasmo": "selhani",
    "postava": "postava-3",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 98,
    "sila": 1,
    "soucet": 1,
    "tvrdostAplikovana": "bedna",
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "selhani_v_uzlu",
    "nodeIndex": 5,
    "novaHodnota": 10,
    "seq": 99,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 5,
    "prah": 10,
    "seq": 100,
    "type": "heat_threshold",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "salva-do-stropu",
          "nazev": "Salva do stropu",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "rudo-pred-ocima",
          "nazev": "Rudo před očima",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 1,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": true,
          "id": "klika-od-vozu",
          "nazev": "Klika od vozu",
          "sila": 1,
          "tag": "nasili",
        },
        "pasmo": "selhani",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 1,
        "tvrdost_aplikovana": "bedna",
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Seřaďovací nádraží",
    "nodeIndex": 5,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-4",
        "vyrazena": true,
        "zraneni": 4,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": true,
    "seq": 101,
    "type": "node_resolved",
    "uzel": "nadrazi-vypravci",
    "zar": 10,
    "zbyvaBeden": 3,
  },
  {
    "nodeIndex": 5,
    "pronasledovatel": "serif-brody",
    "seq": 102,
    "type": "confrontation_started",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "clun-po-kanale",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 5,
    "postava": "postava-1",
    "seq": 103,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-cigareta",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 5,
    "postava": "postava-2",
    "seq": 104,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-cigareta",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 5,
    "postava": "postava-3",
    "seq": 105,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 1,
    "postava": "postava-1",
    "seq": 106,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 107,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 1,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 108,
    "sila": 3,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 4,
    "postava": "postava-3",
    "seq": 109,
    "type": "injury_added",
  },
  {
    "nodeIndex": 5,
    "pocetZraneni": 4,
    "postava": "postava-3",
    "seq": 110,
    "type": "character_down",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 111,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "konfrontace",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "clun-po-kanale",
          "nazev": "Člun po kanále",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "posledni-cigareta",
          "nazev": "Poslední cigareta",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "posledni-cigareta",
          "nazev": "Poslední cigareta",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Konfrontace: Okresní šerif Brody",
    "nodeIndex": 5,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-4",
        "vyrazena": true,
        "zraneni": 4,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 112,
    "type": "node_resolved",
    "uzel": "serif-brody-konfrontace",
    "zar": 10,
    "zbyvaBeden": 3,
  },
  {
    "delta": -7,
    "duvod": "preziti_konfrontace",
    "nodeIndex": 5,
    "novaHodnota": 3,
    "seq": 113,
    "type": "heat_changed",
  },
  {
    "nabidnuto": [
      "rival-prepad",
      "most-hlidka",
    ],
    "nodeIndex": 6,
    "seq": 114,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 6,
    "seq": 115,
    "type": "route_chosen",
    "volba": "rival-prepad",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "pytel-cementu",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 6,
    "postava": "postava-1",
    "seq": 116,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": true,
      "id": "rudo-pred-ocima",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 6,
    "postava": "postava-2",
    "seq": 117,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 6,
    "novaHodnota": 5,
    "seq": 118,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 6,
    "prah": 5,
    "seq": 119,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 120,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 2,
    "duvod": "hlucna_karta",
    "nodeIndex": 6,
    "novaHodnota": 7,
    "seq": 121,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 6,
    "prah": 7,
    "seq": 122,
    "type": "heat_threshold",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 2,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 123,
    "sila": 3,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "pytel-cementu",
          "nazev": "Pytel cementu",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 3,
        "karta": {
          "hlucna": true,
          "id": "rudo-pred-ocima",
          "nazev": "Rudo před očima",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Přepadení rivalů",
    "nodeIndex": 6,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-4",
        "vyrazena": true,
        "zraneni": 4,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 124,
    "type": "node_resolved",
    "uzel": "rival-prepad",
    "zar": 7,
    "zbyvaBeden": 3,
  },
  {
    "nodeIndex": 6,
    "pronasledovatel": "serif-brody",
    "seq": 125,
    "type": "ambush_inserted",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "pohrebni-vuz",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-1",
    "seq": 126,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "vsechno-na-stul",
      "sila": 3,
      "tag": "uplatek",
    },
    "nodeIndex": 6,
    "postava": "postava-2",
    "seq": 127,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "afinita": 0,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 128,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 2,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 129,
    "sila": 3,
    "soucet": 12,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "lecka",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "pohrebni-vuz",
          "nazev": "Pohřební vůz",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "vsechno-na-stul",
          "nazev": "Všechno na stůl",
          "sila": 3,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 12,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Léčka: Okresní šerif Brody",
    "nodeIndex": 6,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-4",
        "vyrazena": true,
        "zraneni": 4,
      },
    ],
    "pronasledovatel": "serif-brody",
    "selhaniVUzlu": false,
    "seq": 130,
    "type": "node_resolved",
    "uzel": "serif-brody-lecka",
    "zar": 7,
    "zbyvaBeden": 3,
  },
  {
    "cile": [
      {
        "body": 3,
        "cil": "prsty-ve-vsem",
        "postava": "postava-1",
        "splnen": true,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "cisty-stit",
        "postava": "postava-2",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "frajer-v-klidu",
        "postava": "postava-3",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "kupecke-slovo",
        "postava": "postava-4",
        "splnen": false,
        "textovy": false,
      },
    ],
    "nodeIndex": 6,
    "pocetUzlu": 6,
    "pricina": "doruceno",
    "seq": 131,
    "type": "run_ended",
    "vysledek": "DORUCENO",
    "zar": 7,
    "zbyvaBeden": 3,
  },
]
`;

exports[`golden runy nad reálným obsahem > seed 42, greedy-affinity, 4 hráči, Malone 1`] = `
[
  {
    "cile": [
      {
        "cil": "samou-modrinu",
        "postava": "postava-1",
      },
      {
        "cil": "frajer-v-klidu",
        "postava": "postava-2",
      },
      {
        "cil": "obetni-beranek",
        "postava": "postava-3",
      },
      {
        "cil": "mozek-operace",
        "postava": "postava-4",
      },
    ],
    "nodeIndex": 0,
    "postavy": [
      "postava-1",
      "postava-2",
      "postava-3",
      "postava-4",
    ],
    "pronasledovatel": "agent-malone",
    "seed": 42,
    "seq": 1,
    "type": "run_started",
    "verzeObsahu": "f0aa105f",
    "verzePravidel": "v0.1 / prototyp-mvp.md 2026-07-22 (po D7–D11)",
  },
  {
    "nabidnuto": [
      "farmar-stodola",
      "mesto-houkacky",
    ],
    "nodeIndex": 1,
    "seq": 2,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 1,
    "seq": 3,
    "type": "route_chosen",
    "volba": "farmar-stodola",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zpev-opilce",
      "sila": 1,
      "tag": "lest",
    },
    "nodeIndex": 1,
    "postava": "postava-1",
    "seq": 4,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "konve-na-mleko",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 1,
    "postava": "postava-2",
    "seq": 5,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zlate-hodinky",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 1,
    "postava": "postava-3",
    "seq": 6,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zkazena-tlacenka",
      "sila": 2,
      "tag": "lest",
    },
    "nodeIndex": 1,
    "postava": "postava-4",
    "seq": 7,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 8,
    "sila": 1,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 1,
    "pocetZraneni": 1,
    "postava": "postava-2",
    "seq": 9,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 10,
    "sila": 2,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "duvod": "rider_uplatek",
    "nodeIndex": 1,
    "postava": "postava-3",
    "seq": 11,
    "type": "crate_lost",
    "zbyvaBeden": 5,
  },
  {
    "nodeIndex": 1,
    "pocetZraneni": 1,
    "postava": "postava-3",
    "seq": 12,
    "type": "injury_added",
  },
  {
    "afinita": 0,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": true,
    "rider": {
      "typ": "uplatek",
      "volba": "zaplatit_bednu",
    },
    "seq": 13,
    "sila": 2,
    "soucet": 3,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 1,
    "pocetZraneni": 1,
    "postava": "postava-4",
    "seq": 14,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 1,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 15,
    "sila": 2,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "zpev-opilce",
          "nazev": "Zpěv opilce",
          "sila": 1,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "konve-na-mleko",
          "nazev": "Konve na mléko",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 1,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "zlate-hodinky",
          "nazev": "Zlaté hodinky",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": true,
        "rider": {
          "typ": "uplatek",
          "volba": "zaplatit_bednu",
        },
        "soucet": 3,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "zkazena-tlacenka",
          "nazev": "Zkažená tlačenka",
          "sila": 2,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Stodola u Batavie",
    "nodeIndex": 1,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 0,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 1,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 16,
    "type": "node_resolved",
    "uzel": "farmar-stodola",
    "zar": 0,
    "zbyvaBeden": 5,
  },
  {
    "nabidnuto": [
      "nadrazi-noc",
      "deputy-hlidka",
    ],
    "nodeIndex": 2,
    "seq": 17,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 2,
    "seq": 18,
    "type": "route_chosen",
    "volba": "nadrazi-noc",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "skok-do-reky",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 2,
    "postava": "postava-1",
    "seq": 19,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "clun-po-kanale",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 2,
    "postava": "postava-2",
    "seq": 20,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "zadni-vratka",
      "sila": 1,
      "tag": "utek",
    },
    "nodeIndex": 2,
    "postava": "postava-3",
    "seq": 21,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "pohrebni-vuz",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 2,
    "postava": "postava-4",
    "seq": 22,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "nodeIndex": 2,
    "pocetZraneni": 1,
    "postava": "postava-1",
    "seq": 23,
    "type": "injury_added",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 24,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 25,
    "sila": 3,
    "soucet": 10,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 2,
    "pocetZraneni": 2,
    "postava": "postava-3",
    "seq": 26,
    "type": "injury_added",
  },
  {
    "karta": "nutkani-ochutnat",
    "nodeIndex": 2,
    "pocetZraneni": 2,
    "postava": "postava-3",
    "seq": 27,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 28,
    "sila": 1,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 0,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 2,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 29,
    "sila": 3,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "skok-do-reky",
          "nazev": "Skok do řeky",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "clun-po-kanale",
          "nazev": "Člun po kanále",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 10,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "zadni-vratka",
          "nazev": "Zadní vrátka",
          "sila": 1,
          "tag": "utek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "pohrebni-vuz",
          "nazev": "Pohřební vůz",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Noční překladiště",
    "nodeIndex": 2,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 1,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 30,
    "type": "node_resolved",
    "uzel": "nadrazi-noc",
    "zar": 0,
    "zbyvaBeden": 5,
  },
  {
    "nabidnuto": [
      "farmar-brod",
      "mesto-ulicka",
    ],
    "nodeIndex": 3,
    "seq": 31,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 3,
    "seq": 32,
    "type": "route_chosen",
    "volba": "farmar-brod",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bankovka-do-dlane",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 3,
    "postava": "postava-1",
    "seq": 33,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "obalka-pro-starostu",
      "sila": 2,
      "tag": "uplatek",
    },
    "nodeIndex": 3,
    "postava": "postava-2",
    "seq": 34,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "vyplata-dopredu",
      "sila": 3,
      "tag": "uplatek",
    },
    "nodeIndex": 3,
    "postava": "postava-3",
    "seq": 35,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "bedna-na-ochutnavku",
      "sila": 3,
      "tag": "uplatek",
    },
    "nodeIndex": 3,
    "postava": "postava-4",
    "seq": 36,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 37,
    "sila": 2,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-2",
    "seq": 38,
    "type": "injury_added",
  },
  {
    "karta": "podvrtnuty-kotnik",
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-2",
    "seq": 39,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 40,
    "sila": 2,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 3,
    "novaHodnota": 1,
    "seq": 41,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-3",
    "seq": 42,
    "type": "injury_added",
  },
  {
    "karta": "kocovina",
    "nodeIndex": 3,
    "pocetZraneni": 3,
    "postava": "postava-3",
    "seq": 43,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": -2,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-3",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 44,
    "sila": 3,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-4",
    "seq": 45,
    "type": "injury_added",
  },
  {
    "karta": "roztresene-ruce",
    "nodeIndex": 3,
    "pocetZraneni": 2,
    "postava": "postava-4",
    "seq": 46,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 3,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 47,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "bankovka-do-dlane",
          "nazev": "Bankovka do dlaně",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "obalka-pro-starostu",
          "nazev": "Obálka pro starostu",
          "sila": 2,
          "tag": "uplatek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "vyplata-dopredu",
          "nazev": "Výplata dopředu",
          "sila": 3,
          "tag": "uplatek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "bedna-na-ochutnavku",
          "nazev": "Bedna na ochutnávku",
          "sila": 3,
          "tag": "uplatek",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Brod u farmy",
    "nodeIndex": 3,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 1,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 2,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 48,
    "type": "node_resolved",
    "uzel": "farmar-brod",
    "zar": 1,
    "zbyvaBeden": 5,
  },
  {
    "nabidnuto": [
      "rival-prepad",
      "nadrazi-vypravci",
    ],
    "nodeIndex": 4,
    "seq": 49,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 4,
    "seq": 50,
    "type": "route_chosen",
    "volba": "rival-prepad",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "pytel-cementu",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-1",
    "seq": 51,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "klika-od-vozu",
      "sila": 1,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-2",
    "seq": 52,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": true,
      "id": "rudo-pred-ocima",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-3",
    "seq": 53,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "dedeckova-brokovnice",
      "sila": 3,
      "tag": "nasili",
    },
    "nodeIndex": 4,
    "postava": "postava-4",
    "seq": 54,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 2,
    "seq": 55,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 2,
    "postava": "postava-1",
    "seq": 56,
    "type": "injury_added",
  },
  {
    "karta": "ztrata-dustojnosti",
    "nodeIndex": 4,
    "pocetZraneni": 2,
    "postava": "postava-1",
    "seq": 57,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-1",
    "postihZraneni": 1,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 58,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 3,
    "seq": 59,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 3,
    "postava": "postava-2",
    "seq": 60,
    "type": "injury_added",
  },
  {
    "karta": "krec",
    "nodeIndex": 4,
    "pocetZraneni": 3,
    "postava": "postava-2",
    "seq": 61,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 62,
    "sila": 1,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 4,
    "seq": 63,
    "type": "heat_changed",
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": -2,
    "nodeIndex": 4,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 64,
    "sila": 3,
    "soucet": 8,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 4,
    "novaHodnota": 5,
    "seq": 65,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 4,
    "prah": 5,
    "seq": 66,
    "type": "heat_threshold",
  },
  {
    "nodeIndex": 4,
    "pocetZraneni": 3,
    "postava": "postava-4",
    "seq": 67,
    "type": "injury_added",
  },
  {
    "karta": "prazdne-kapsy",
    "nodeIndex": 4,
    "pocetZraneni": 3,
    "postava": "postava-4",
    "seq": 68,
    "type": "cursed_drawn",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 4,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 69,
    "sila": 3,
    "soucet": 5,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": true,
          "id": "pytel-cementu",
          "nazev": "Pytel cementu",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": true,
          "id": "klika-od-vozu",
          "nazev": "Klika od vozu",
          "sila": 1,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 5,
        "karta": {
          "hlucna": true,
          "id": "rudo-pred-ocima",
          "nazev": "Rudo před očima",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 8,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 2,
        "karta": {
          "hlucna": true,
          "id": "dedeckova-brokovnice",
          "nazev": "Dědečkova brokovnice",
          "sila": 3,
          "tag": "nasili",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 5,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Přepadení rivalů",
    "nodeIndex": 4,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 3,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 70,
    "type": "node_resolved",
    "uzel": "rival-prepad",
    "zar": 5,
    "zbyvaBeden": 5,
  },
  {
    "nabidnuto": [
      "zatah",
    ],
    "nodeIndex": 5,
    "seq": 71,
    "type": "route_offered",
    "zatah": true,
  },
  {
    "nodeIndex": 5,
    "seq": 72,
    "type": "route_chosen",
    "volba": "zatah",
    "zatah": true,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "sklep-u-strejdy",
      "sila": 2,
      "tag": "utek",
    },
    "nodeIndex": 5,
    "postava": "postava-1",
    "seq": 73,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-cigareta",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 5,
    "postava": "postava-2",
    "seq": 74,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-cigareta",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 5,
    "postava": "postava-3",
    "seq": 75,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-cigareta",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 5,
    "postava": "postava-4",
    "seq": 76,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "afinita": 2,
    "hod": 5,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 77,
    "sila": 2,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 78,
    "sila": 3,
    "soucet": 9,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 79,
    "sila": 3,
    "soucet": 11,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 5,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 80,
    "sila": 3,
    "soucet": 11,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "zatah",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 5,
        "karta": {
          "hlucna": false,
          "id": "sklep-u-strejdy",
          "nazev": "Sklep u strejdy",
          "sila": 2,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "posledni-cigareta",
          "nazev": "Poslední cigareta",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 9,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "posledni-cigareta",
          "nazev": "Poslední cigareta",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 11,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "posledni-cigareta",
          "nazev": "Poslední cigareta",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 11,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Zátah",
    "nodeIndex": 5,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-2",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 3,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 81,
    "type": "node_resolved",
    "uzel": "zatah",
    "zar": 5,
    "zbyvaBeden": 5,
  },
  {
    "nabidnuto": [
      "urednik-razitko",
      "rival-parley",
    ],
    "nodeIndex": 6,
    "seq": 82,
    "type": "route_offered",
    "zatah": false,
  },
  {
    "nodeIndex": 6,
    "seq": 83,
    "type": "route_chosen",
    "volba": "urednik-razitko",
    "zatah": false,
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": false,
      "id": "skok-do-reky",
      "sila": 3,
      "tag": "utek",
    },
    "nodeIndex": 6,
    "postava": "postava-1",
    "seq": 84,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-2",
    "seq": 85,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-3",
    "seq": 86,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-4",
    "seq": 87,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "duvod": "rider_utek",
    "nodeIndex": 6,
    "postava": "postava-1",
    "seq": 88,
    "type": "crate_lost",
    "zbyvaBeden": 4,
  },
  {
    "delta": 2,
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 6,
    "novaHodnota": 7,
    "seq": 89,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 6,
    "prah": 7,
    "seq": 90,
    "type": "heat_threshold",
  },
  {
    "afinita": 0,
    "hod": 3,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "selhani",
    "postava": "postava-1",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": {
      "typ": "utek",
      "volba": "bedna",
    },
    "seq": 91,
    "sila": 3,
    "soucet": 4,
    "tvrdostAplikovana": "zar",
    "type": "check_resolved",
  },
  {
    "nodeIndex": 6,
    "pocetZraneni": 4,
    "postava": "postava-2",
    "seq": 92,
    "type": "injury_added",
  },
  {
    "nodeIndex": 6,
    "pocetZraneni": 4,
    "postava": "postava-2",
    "seq": 93,
    "type": "character_down",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-2",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 94,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 2,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 95,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 96,
    "sila": 3,
    "soucet": 11,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "delta": 1,
    "duvod": "selhani_v_uzlu",
    "nodeIndex": 6,
    "novaHodnota": 8,
    "seq": 97,
    "type": "heat_changed",
  },
  {
    "druh": "uzel",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 1,
        "dobrovolna": true,
        "hod": 3,
        "karta": {
          "hlucna": false,
          "id": "skok-do-reky",
          "nazev": "Skok do řeky",
          "sila": 3,
          "tag": "utek",
        },
        "pasmo": "selhani",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": {
          "typ": "utek",
          "volba": "bedna",
        },
        "soucet": 4,
        "tvrdost_aplikovana": "zar",
        "zoufala": false,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-2",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 11,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Chybějící razítko",
    "nodeIndex": 6,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 2,
      },
      {
        "id": "postava-2",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-4",
        "vyrazena": false,
        "zraneni": 3,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": true,
    "seq": 98,
    "type": "node_resolved",
    "uzel": "urednik-razitko",
    "zar": 8,
    "zbyvaBeden": 4,
  },
  {
    "nodeIndex": 6,
    "pronasledovatel": "agent-malone",
    "seq": 99,
    "type": "ambush_inserted",
  },
  {
    "dobrovolna": true,
    "karta": {
      "hlucna": true,
      "id": "mosazny-boxer",
      "sila": 2,
      "tag": "nasili",
    },
    "nodeIndex": 6,
    "postava": "postava-1",
    "seq": 100,
    "type": "card_played",
    "zoufala": false,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-3",
    "seq": 101,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-4",
    "seq": 102,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "delta": 1,
    "duvod": "hlucna_karta",
    "nodeIndex": 6,
    "novaHodnota": 9,
    "seq": 103,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 6,
    "pocetZraneni": 3,
    "postava": "postava-1",
    "seq": 104,
    "type": "injury_added",
  },
  {
    "karta": "zbrklost",
    "nodeIndex": 6,
    "pocetZraneni": 3,
    "postava": "postava-1",
    "seq": 105,
    "type": "cursed_drawn",
  },
  {
    "delta": 1,
    "duvod": "tvrdost_uzlu",
    "nodeIndex": 6,
    "novaHodnota": 10,
    "seq": 106,
    "type": "heat_changed",
  },
  {
    "nodeIndex": 6,
    "prah": 10,
    "seq": 107,
    "type": "heat_threshold",
  },
  {
    "afinita": 0,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "selhani",
    "postava": "postava-1",
    "postihZraneni": 2,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 108,
    "sila": 2,
    "soucet": 4,
    "tvrdostAplikovana": "zar",
    "type": "check_resolved",
  },
  {
    "afinita": 2,
    "hod": 6,
    "modifikatory": 1,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 109,
    "sila": 3,
    "soucet": 12,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "nodeIndex": 6,
    "pocetZraneni": 4,
    "postava": "postava-4",
    "seq": 110,
    "type": "injury_added",
  },
  {
    "nodeIndex": 6,
    "pocetZraneni": 4,
    "postava": "postava-4",
    "seq": 111,
    "type": "character_down",
  },
  {
    "afinita": 2,
    "hod": 1,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "uspech_za_cenu",
    "postava": "postava-4",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 112,
    "sila": 3,
    "soucet": 6,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "lecka",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": true,
        "hod": 4,
        "karta": {
          "hlucna": true,
          "id": "mosazny-boxer",
          "nazev": "Mosazný boxer",
          "sila": 2,
          "tag": "nasili",
        },
        "pasmo": "selhani",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 4,
        "tvrdost_aplikovana": "zar",
        "zoufala": false,
        "zraneni_pridana": 1,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 6,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 12,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 1,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech_za_cenu",
        "postava": "postava-4",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 6,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 1,
      },
    ],
    "nazev": "Léčka: Federální agent Malone",
    "nodeIndex": 6,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-2",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-4",
        "vyrazena": true,
        "zraneni": 4,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": true,
    "seq": 113,
    "type": "node_resolved",
    "uzel": "agent-malone-lecka",
    "zar": 10,
    "zbyvaBeden": 4,
  },
  {
    "nodeIndex": 6,
    "pronasledovatel": "agent-malone",
    "seq": 114,
    "type": "confrontation_started",
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-1",
    "seq": 115,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "dobrovolna": false,
    "karta": {
      "hlucna": false,
      "id": "posledni-lez",
      "sila": 3,
      "tag": "lest",
    },
    "nodeIndex": 6,
    "postava": "postava-3",
    "seq": 116,
    "type": "card_played",
    "zoufala": true,
  },
  {
    "afinita": 0,
    "hod": 2,
    "modifikatory": 2,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-1",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 117,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "afinita": 0,
    "hod": 4,
    "modifikatory": 0,
    "nodeIndex": 6,
    "pasmo": "uspech",
    "postava": "postava-3",
    "postihZraneni": 0,
    "povysenoZeSelhani": false,
    "rider": null,
    "seq": 118,
    "sila": 3,
    "soucet": 7,
    "tvrdostAplikovana": null,
    "type": "check_resolved",
  },
  {
    "druh": "konfrontace",
    "hody": [
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 2,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-1",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
      {
        "bedny_ztracene_timto_hodem": 0,
        "dobrovolna": false,
        "hod": 4,
        "karta": {
          "hlucna": false,
          "id": "posledni-lez",
          "nazev": "Poslední lež",
          "sila": 3,
          "tag": "lest",
        },
        "pasmo": "uspech",
        "postava": "postava-3",
        "povyseno_ze_selhani": false,
        "rider": null,
        "soucet": 7,
        "tvrdost_aplikovana": null,
        "zoufala": true,
        "zraneni_pridana": 0,
      },
    ],
    "nazev": "Konfrontace: Federální agent Malone",
    "nodeIndex": 6,
    "postavy": [
      {
        "id": "postava-1",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-2",
        "vyrazena": true,
        "zraneni": 4,
      },
      {
        "id": "postava-3",
        "vyrazena": false,
        "zraneni": 3,
      },
      {
        "id": "postava-4",
        "vyrazena": true,
        "zraneni": 4,
      },
    ],
    "pronasledovatel": "agent-malone",
    "selhaniVUzlu": false,
    "seq": 119,
    "type": "node_resolved",
    "uzel": "agent-malone-konfrontace",
    "zar": 10,
    "zbyvaBeden": 4,
  },
  {
    "delta": -7,
    "duvod": "preziti_konfrontace",
    "nodeIndex": 6,
    "novaHodnota": 3,
    "seq": 120,
    "type": "heat_changed",
  },
  {
    "cile": [
      {
        "body": 2,
        "cil": "samou-modrinu",
        "postava": "postava-1",
        "splnen": true,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "frajer-v-klidu",
        "postava": "postava-2",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "obetni-beranek",
        "postava": "postava-3",
        "splnen": false,
        "textovy": false,
      },
      {
        "body": 0,
        "cil": "mozek-operace",
        "postava": "postava-4",
        "splnen": null,
        "textovy": true,
      },
    ],
    "nodeIndex": 6,
    "pocetUzlu": 6,
    "pricina": "doruceno",
    "seq": 121,
    "type": "run_ended",
    "vysledek": "DORUCENO",
    "zar": 3,
    "zbyvaBeden": 4,
  },
]
`;
